change styling of checkbox

--- a/code/java/troop/static/client/estimates.html
+++ b/code/java/troop/static/client/estimates.html
@@ -69,17 +69,17 @@
                 /* Create a custom checkbox */
             .checkmark {
                 position: absolute;
-                /* text-align: center; */
+                border: 5px black;
                 top: 0;
                 left: 0;
                 height: 25px;
                 width: 25px;
-                background-color: white;
+                background-color: rgb(133, 130, 130);
             }
 
                 /* On mouse-over, add a grey background color */
             .container:hover input ~ .checkmark {
-                background-color: #ccc;
+                background-color: rgb(102, 100, 100);
             }
 
                 /* When the checkbox is checked, add a blue background */
@@ -129,12 +129,15 @@
     </div>
 
     <!-- Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/> -->
-    <!-- <div id="ScoutTableContainer"></div> -->
+    <!-- <div id="ScoutTableContainer"></div>
+    
+    rgba(255, 255, 255, 0.954)
+    -->
     
     <div style="margin-left: 200px; margin-right: 200px; 
     margin-top: 50px; margin-bottom: 50px;
-    position: relative; background-color:rgba(255, 255, 255, 0.954); border: 10px black;
-    height: 500px; border-radius: 30px;" id="estimate_container">
+    position: relative; background-color:rgba(220, 222, 224, 0.817); border: 10px black;
+    height: 700px; border-radius: 30px;" id="estimate_container">
 
         <h1 style="text-align: center; line-height: 75px;"> Get Repair Estimates</h1>
         <p style="text-align: center; font-size: 23px;"> Select repairs from the dropdown to generate an estimate of the total cost.</p>
