--- a/code/java/troop/static/client/estimates.html
+++ b/code/java/troop/static/client/estimates.html
@@ -137,7 +137,7 @@
     <div style="margin-left: 200px; margin-right: 200px; 
     margin-top: 50px; margin-bottom: 50px;
     position: relative; background-color:rgba(255, 255, 255, 0.954); border: 10px black;
-    height: 700px; border-radius: 30px;" id="estimate_container">
+    height: 900px; border-radius: 30px;" id="estimate_container">
 
         <h1 style="text-align: center; line-height: 75px;"> Get Repair Estimates</h1>
         <p style="text-align: center; font-size: 23px;"> Select repairs from the dropdown to generate an estimate of the total cost.</p>
@@ -160,6 +160,7 @@
               </label>
               <input type="submit" value="Submit"> -->
         </form>
+        <div id="estimate_text" style="text-align: center; position: relative;"></div>
     </div>
 
     <!-- <div style="margin: 30px; position: relative" id="PhoneTableContainer"></div> -->
