--- a/code/java/troop/static/client/estimates.html
+++ b/code/java/troop/static/client/estimates.html
@@ -44,7 +44,7 @@
                 transform: translateY(4px);
             }
 
-            .container {
+            /* .container {
                 display: block;
                 position: relative;
                 padding-left: 35px;
@@ -55,9 +55,8 @@
                 -moz-user-select: none;
                 -ms-user-select: none;
                 user-select: none;
-            }
+            } 
 
-            /* Hide the browser's default checkbox */
             .container input {
                 position: absolute;
                 opacity: 0;
@@ -66,7 +65,6 @@
                 width: 0;
             }
 
-                /* Create a custom checkbox */
             .checkmark {
                 position: absolute;
                 border: 5px black;
@@ -77,29 +75,25 @@
                 background-color: rgb(180, 173, 173);
             }
 
-                /* On mouse-over, add a grey background color */
             .container:hover input ~ .checkmark {
                 background-color: rgb(88, 86, 86);
             }
 
-                /* When the checkbox is checked, add a blue background */
             .container input:checked ~ .checkmark {
                 background-color: #2196F3;
             }
 
-                /* Create the checkmark/indicator (hidden when not checked) */
+    
             .checkmark:after {
                 content: "";
                 position: absolute;
                 display: none;
             }
 
-                /* Show the checkmark when checked */
             .container input:checked ~ .checkmark:after {
                 display: block;
             }
 
-                /* Style the checkmark/indicator */
             .container .checkmark:after {
                 left: 9px;
                 top: 5px;
@@ -110,6 +104,23 @@
                 -webkit-transform: rotate(45deg);
                 -ms-transform: rotate(45deg);
                 transform: rotate(45deg);
+            } */ 
+
+            input[type='checkbox'] {
+                -webkit-appearance:none;
+                line-height:10px;
+                padding-:5px;
+                width:21px;
+                height:21px;
+                background:white;
+                border-radius:5px;
+                border:2px solid #555;
+            }
+            input[type='checkbox']:checked {
+                background: #abd;
+            }
+            input[type='checkbox']:hover {
+                cursor: pointer;
             }
     </style>
   </head>
