fix decimal format

--- a/code/java/troop/static/client/estimates.html
+++ b/code/java/troop/static/client/estimates.html
@@ -152,7 +152,7 @@
 
         <h1 style="text-align: center; line-height: 75px;"> Get Repair Estimates</h1>
         <p style="text-align: center; font-size: 23px;"> Select repairs from the dropdown to generate an estimate of the total cost.</p>
-        <form id="estimate_form" style="display:inline-block;" action="/get-estimates" method="POST">
+        <form id="estimate_form" style="display:inline-block;">
               <!-- <label class="container">Brakes
                 <input type="checkbox" name="1" value="brakes">
                 <span class="checkmark"></span>
